# peter-discord

./: .gitignore  Cargo.toml  README.md
assets/: deploy.ps1  peter.py  peter.service
crate/peter/: Cargo.toml
crate/peter-cli/: Cargo.toml
crate/peter-cli/src/: main.rs
crate/peter-ipc/: Cargo.toml
crate/peter-ipc/src/: lib.rs
crate/peter-python/: Cargo.toml
crate/peter-python/src/: lib.rs
crate/peter/src/: commands.rs  config.rs  emoji.rs  ipc.rs  lang.rs  lib.rs  parse.rs  twitch.rs  user_list.rs  voice.rs  werewolf.rs
src/: bitbar.rs  commands.rs  emoji.rs  lang.rs  lib.rs  main.rs  model.rs  parse.rs  twitch.rs  user_list.rs  voice.rs  werewolf.rs
