[package]
name = "peter"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[[bin]]
name = "peter"
path = "src/main.rs"
doc = false
test = false
bench = false

[lib]
name = "peter"
path = "src/lib.rs"

[dependencies]
chrono = "*"
lazy_static = "*"
num-traits = "*"
rand = "*"
regex = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
serenity = "*"
shlex = "*"
typemap = "*"
whoami = "*"
wrapped_enum = "*"

[dependencies.quantum-werewolf]
git = "https://github.com/dasgefolge/quantum-werewolf"
