[package]
name = "peter"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[[bin]]
name = "peter"
path = "src/main.rs"
doc = false
test = false
bench = false

[lib]
name = "peter"
path = "src/lib.rs"

[dependencies]
chrono = "0"
lazy_static = "1"
num-traits = "0"
rand = "0"
regex = "1"
serde = "1"
serde_json = "1"
serenity = "0"
typemap = "0"
whoami = "0"

[dependencies.derive_more]
version = "0"
default-features = false
features = ["from"]

[dependencies.quantum-werewolf]
git = "https://github.com/dasgefolge/quantum-werewolf"

[dependencies.shlex]
git = "https://github.com/fenhl/rust-shlex"
