[package]
name = "peter"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[[bin]]
name = "peter"
path = "src/main.rs"
doc = false
test = false
bench = false

[lib]
name = "peter"
path = "src/lib.rs"

[dependencies]
async-std = "1"
chrono = "0"
futures = "0.3"
itertools = "0.9"
lazy_static = "1"
num-traits = "0"
rand = "0"
regex = "1"
serde = "1"
serde_json = "1"
serenity = "0.8"
typemap = "0"
whoami = "0"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.quantum-werewolf]
git = "https://github.com/dasgefolge/quantum-werewolf"

[dependencies.shlex]
git = "https://github.com/fenhl/rust-shlex"

[dependencies.twitch_helix]
#version = "0.1" #TODO publish
git = "https://github.com/fenhl/rust-twitch-helix"
