[package]
name = "peter-cli"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[[bin]]
name = "peter"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
itertools = "0.11"
rand = "0.8"
serde_json = "1"
#serenity = "0.11" # waiting for support for new username system to be published

[dependencies.peter]
path = "../peter"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = ["rustls_backend", "temp_cache"]

[dependencies.serenity-utils]
git = "https://github.com/fenhl/serenity-utils"
#branch = "main" # waiting for a serenity version with support for new username system to be published
branch = "next"

[dependencies.sqlx]
version = "0.6"
features = ["postgres", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
