[package]
name = "peter-cli"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[[bin]]
name = "peter"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
itertools = "0.13"
peter = { path = "../peter" }
rand = "0.8"
serde_json = "1"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", default-features = false, features = ["rustls_backend", "temp_cache"] }
serenity-utils = { git = "https://github.com/fenhl/serenity-utils", branch = "current" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
