[package]
name = "peter-ipc"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[lib]
name = "peter_ipc"
path = "src/lib.rs"

[dependencies]
serenity = "0.9"

[dependencies.peter]
path = "../peter"

[dependencies.serenity-utils]
git = "https://github.com/fenhl/serenity-utils" #TODO publish to crates.io
branch = "main"
