[package]
name = "peter-ipc"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "peter_ipc"
path = "src/lib.rs"

[dependencies]
serenity = "0.11"

[dependencies.peter]
path = "../peter"

[dependencies.serenity-utils]
git = "https://github.com/fenhl/serenity-utils"
#branch = "main" # waiting for a serenity version with support for new username system to be published
branch = "next"
