[package]
name = "peter-ipc"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "peter_ipc"
path = "src/lib.rs"

[dependencies]
peter = { path = "../peter" }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
serenity-utils = { git = "https://github.com/fenhl/serenity-utils", branch = "current" }
