[package]
name = "peter-python"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "peter"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.peter-ipc]
path = "../peter-ipc"

[dependencies.pyo3]
version = "0.19"
features = ["extension-module"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["model", "utils"]
