[package]
name = "peter-python"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "peter"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
peter-ipc = { path = "../peter-ipc" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", default-features = false, features = ["model", "utils"] }
