[package]
name = "peter"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[dependencies]
futures = "0.3"
itertools = "0.11"
num-traits = "0.2"
rand = "0.8"
serde_json = "1"
#serenity = "0.11" # waiting for support for new username system to be published
thiserror = "1"

[dependencies.quantum-werewolf]
git = "https://github.com/dasgefolge/quantum-werewolf"
branch = "main"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = ["rustls_backend", "temp_cache"]

[dependencies.serenity-utils]
git = "https://github.com/fenhl/serenity-utils"
#branch = "main" # waiting for a serenity version with support for new username system to be published
branch = "next"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["chrono", "json", "macros", "postgres", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "1"
features = ["process", "time"]

[dependencies.twitch_helix]
git = "https://github.com/fenhl/rust-twitch-helix" #TODO publish to crates.io
branch = "main"

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
